
syntax = "proto3";

option go_package = "github.com/gambarini/grpcdemo/pb/chat";

package pb;

service Chat {

    rpc StartChat(stream Message) returns (stream Message) {}

}


enum MessageType {
    CONNECT = 0;
    DISCONNECT = 1;
    TEXT = 2;
}

message Message {

    string text = 1;
    string from_contact_id = 2;
    string to_contact_id = 3;
    MessageType type = 4;
}